Fix speaker media object on mobile.

--- a/app/assets/stylesheets/scss/_settings.global.scss
+++ b/app/assets/stylesheets/scss/_settings.global.scss
@@ -101,3 +101,6 @@ $inuit-enable-responsive-paddings--small: true;
 $inuit-enable-responsive-paddings--large: true;
 $inuit-enable-responsive-paddings--huge:  true;
 $inuit-enable-responsive-paddings--none:  true;
+
+//https://github.com/inuitcss/objects.media
+$inuit-enable-media--responsive: true;
